<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="10dp">


    <TextView
        android:id="@+id/eventCreateTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/add_new_event"
        android:textColor="@color/on_background"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/name"
        android:textColorHint="@color/on_background"
        app:boxStrokeColor="@color/on_background"
        app:hintTextColor="@color/on_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eventCreateTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dateLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/date"
        android:textColorHint="@color/on_background"
        app:boxStrokeColor="@color/on_background"
        app:hintTextColor="@color/on_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dateInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="date" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/startTimeLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/start_time"
        android:textColorHint="@color/on_background"
        app:boxStrokeColor="@color/on_background"
        app:hintTextColor="@color/on_background"
        app:layout_constraintEnd_toStartOf="@id/timeDividerText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dateLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/startTimeInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="time" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/timeDividerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:gravity="center"
        android:text="-"
        android:textColor="@color/on_background"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@id/startTimeLayout"
        app:layout_constraintEnd_toStartOf="@id/endTimeLayout"
        app:layout_constraintStart_toEndOf="@id/startTimeLayout"
        app:layout_constraintTop_toTopOf="@id/startTimeLayout" />

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/endTimeLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/end_time"
        android:textColorHint="@color/on_background"
        app:boxStrokeColor="@color/on_background"
        app:hintTextColor="@color/on_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/timeDividerText"
        app:layout_constraintTop_toBottomOf="@id/dateLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/endTimeInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="time" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/locationTypeToggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:checkedButton="@id/onlineButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/startTimeLayout"
        app:selectionRequired="true"
        app:singleSelection="true">

        <Button
            android:id="@+id/onlineButton"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/online"
            android:textColor="@color/on_background" />

        <Button
            android:id="@+id/offlineButton"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/offline"
            android:textColor="@color/on_background" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/locationNameLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/link"
        android:textColorHint="@color/on_background"
        app:boxStrokeColor="@color/on_background"
        app:hintTextColor="@color/on_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/locationTypeToggleButton">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/locationNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/pointListCard"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:visibility="gone"
        app:cardBackgroundColor="@color/background"
        app:cardCornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@id/eventCreateButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/locationNameLayout"
        tools:visibility="visible">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/pointList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="12"
            tools:listitem="@layout/item_point" />
    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/eventCreateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_event"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pointListCard" />
</androidx.constraintlayout.widget.ConstraintLayout>