<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/surface"
    app:cardCornerRadius="30dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/surface">

        <TextView
            android:id="@+id/addLocationTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:gravity="center"
            android:text="@string/add_point"
            android:textColor="@color/on_surface"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/pointNameLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pointNameLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:hint="@string/point_name"
            android:textColorHint="@color/on_surface"
            app:boxStrokeColor="@color/on_surface"
            app:expandedHintEnabled="false"
            app:hintAnimationEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addLocationTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pointNameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textCursorDrawable="@null" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:paddingVertical="11dp"
            android:text="@android:string/cancel"
            android:textColor="@color/on_surface"
            android:textSize="17sp"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/confirmButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pointNameLayout" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/confirmButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:paddingVertical="11dp"
            android:text="@string/add"
            android:textColor="@color/on_surface"
            android:textSize="17sp"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cancelButton"
            app:layout_constraintTop_toBottomOf="@id/pointNameLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>