<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primary"
        android:elevation="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backButtonIcon"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="match_parent"
            android:contentDescription="@string/account"
            android:padding="10dp"
            android:src="@drawable/icon_back_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/on_primary" />

        <TextView
            android:id="@+id/clusterName"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:textColor="@color/on_primary"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/backButtonIcon"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Cluster Name" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/clusterIdLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/cluster_id"
        android:textColorHint="@color/on_background"
        app:boxStrokeColor="@color/on_background"
        app:hintTextColor="@color/on_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/clusterId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:clickable="true"
            android:longClickable="false"
            android:textIsSelectable="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/clusterPrivacyStateTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/is_private"
        android:textColor="@color/on_background"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/clusterPrivacyStateButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clusterIdLayout" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/clusterPrivacyStateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/clusterPrivacyStateTitle"
        app:layout_constraintTop_toBottomOf="@id/clusterIdLayout"
        app:thumbTint="@color/on_surface"
        app:trackTint="@color/surface" />

</androidx.constraintlayout.widget.ConstraintLayout>